# FP-Isolatorkristall

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
Evaluation/: Evaluation_ISO.tex  references.bib
Preparation/: Preparation_ISO.tex  references.bib
